--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
   <link rel="icon" href="icons/favicon.png">
-  <link rel="manifest" href="/assets/manifest.226e409d.json">
+  <link rel="manifest" href="./assets/manifest.226e409d.json">
 
   <!-- built styles file will be auto injected -->
-  <script type="module" crossorigin src="/assets/index.63d8eeb0.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.d35e1705.js">
-  <link rel="stylesheet" href="/assets/index.018c9c40.css">
+  <script type="module" crossorigin src="./assets/index.63d8eeb0.js"></script>
+  <link rel="modulepreload" href="./assets/vendor.d35e1705.js">
+  <link rel="stylesheet" href="./assets/index.ec7624a1.css">
 </head>
 
 <body>
