--- a/fashion/index.html
+++ b/fashion/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fashion Slider</title>
+  <title>Fashion</title>
 
   <style>
     body,
@@ -24,7 +24,7 @@
       -webkit-user-drag: none;
       -webkit-user-select: none;
       -ms-user-select: none;
-      pointer-events: none;
+      /* pointer-events: none; */
     }
 
     .fashion-slider-title-text {
