--- a/fashion/index.html
+++ b/fashion/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fashion</title>
+  <title>Start</title>
 
   <style>
     body,
@@ -42,7 +42,7 @@
     }
   </style>
   <script type="module" crossorigin src="assets/index.d8a54396.js"></script>
-  <link rel="stylesheet" href="assets/index.0d25bdac.css">
+  <link rel="stylesheet" href="assets/index.c7c38546.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <!-- configure slide color with "data-slide-bg-color" attribute -->
-          <div class="swiper-slide" data-slide-bg-color="#9FA051">
+          <div class="swiper-slide" data-slide-bg-color="#066EFF"> <!-- #9FA051 -->
             <!-- slide title wrap -->
             <div class="fashion-slider-title" data-swiper-parallax="-130%">
               <!-- slide title text -->
@@ -63,33 +63,35 @@
             <!-- slide image wrap -->
             <div class="fashion-slider-scale">
               <!-- slide image -->
-              <img src="images/feria.jpg">
+              <img src="images/mixtape.jpg">
             </div>
           </div>
           <!-- configure slide color with "data-slide-bg-color" attribute -->
-          <div class="swiper-slide" data-slide-bg-color="#9B89C5">
+          <div class="swiper-slide" data-slide-bg-color="#ff6600"> <!-- #9B89C5 -->
             <!-- slide title wrap -->
             <div class="fashion-slider-title" data-swiper-parallax="-130%">
               <!-- slide title text -->
-              <div class="fashion-slider-title-text">360º</div>
+              <a href="https://alibhtty.com" class="fashion-slider-title-text">alibhtty</a>
+              <!-- <div class="fashion-slider-title-text">alibhtty</div> -->
             </div>
             <!-- slide image wrap -->
             <div class="fashion-slider-scale">
               <!-- slide image -->
-              <img src="images/sun.jpg">
+              <img src="images/alibhtty.jpg">
             </div>
           </div>
           <!-- configure slide color with "data-slide-bg-color" attribute -->
-          <div class="swiper-slide" data-slide-bg-color="#D7A594">
+          <div class="swiper-slide" data-slide-bg-color="#00782a"> <!-- #D7A594 -->
             <!-- slide title wrap -->
             <div class="fashion-slider-title" data-swiper-parallax="-130%">
               <!-- slide title text -->
-              <div class="fashion-slider-title-text">7:00</div>
+              <a href="https://alibhtty.com/cyborg/" class="fashion-slider-title-text">Cyborg</a>
+              <!-- <div class="fashion-slider-title-text">Cyborg</div> -->
             </div>
             <!-- slide image wrap -->
             <div class="fashion-slider-scale">
               <!-- slide image -->
-              <img src="images/playa.jpg">
+              <img src="images/cyborg.jpg">
             </div>
           </div>
         </div>
@@ -98,11 +100,11 @@
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 350 160 90">
             <g class="fashion-slider-svg-wrap">
               <g class="fashion-slider-svg-circle-wrap">
-                <circle cx="42" cy="42" r="40"></circle>
+                <circle cx="42" cy="42" r="30"></circle>
               </g>
               <path class="fashion-slider-svg-arrow" d="M.983,6.929,4.447,3.464.983,0,0,.983,2.482,3.464,0,5.946Z">
               </path>
-              <path class="fashion-slider-svg-line" d="M80,0H0"></path>
+              <path class="fashion-slider-svg-line" d="M60,0H0"></path>
             </g>
           </svg>
         </div>
@@ -111,11 +113,11 @@
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 350 160 90">
             <g class="fashion-slider-svg-wrap">
               <g class="fashion-slider-svg-circle-wrap">
-                <circle cx="42" cy="42" r="40"></circle>
+                <circle cx="42" cy="42" r="30"></circle> <!-- r="40" -->
               </g>
               <path class="fashion-slider-svg-arrow" d="M.983,6.929,4.447,3.464.983,0,0,.983,2.482,3.464,0,5.946Z">
               </path>
-              <path class="fashion-slider-svg-line" d="M80,0H0"></path>
+              <path class="fashion-slider-svg-line" d="M60,0H0"></path>
             </g>
           </svg>
         </div>
