--- a/shop/index.html
+++ b/shop/index.html
@@ -1003,7 +1003,7 @@
             <amp-story-cta-layer>
                 <div animate-in="fade-in" animate-in-delay="2s" animate-in-duration="2s">
                     <a animate-in="fly-in-bottom" animate-in-delay="1s" animate-in-duration="2s" class="amp-btn-volver"
-                        href="https://www.mixcloud.com/alibhtty/" target="_blank">
+                        href="https://buy.stripe.com/00g7wm7dj2Jde52dQQ">  <!-- target="_blank"  https://www.mixcloud.com/alibhtty/ -->
                         DESLIZA
                     </a>
                 </div>
