--- a/shop/index.html
+++ b/shop/index.html
@@ -971,6 +971,40 @@
             </amp-story-grid-layer>
         </amp-story-page>
 
+<!-- Calendario -->
+<amp-story-page id="pag-link-inferior" class="amp-fondo-volver-home">
+    <amp-story-grid-layer class="amp-story-portada-img lazy" template="fill">
+        <amp-img src="./img/calendar.jpg" width="320" height="548" alt="Volver al home"
+            layout="responsive">
+        </amp-img>
+    </amp-story-grid-layer>
+    <!-- <amp-story-grid-layer template="thirds">
+        <span></span>
+        <div animate-in="fly-in-bottom" animate-in-delay="0.5s" animate-in-duration="1s"
+            class="amp-cont-anim-01">
+            <div animate-in="fade-in" animate-in-delay="1s" animate-in-duration="3s">
+                <span class="amp-icon-volver"></span>
+                <p class="amp-story-texto-volver">THERAPY</p>
+            </div>
+        </div>
+    </amp-story-grid-layer> -->
+
+    <amp-story-grid-layer class="amp-story-txt-inferior-fade-txt" template="vertical" style="margin-bottom: 2rem;">
+        <p class="amp-story-txt-inferior-fade-titulo"> Próximos lanzamientos </p>
+        <p class="amp-story-texto-con-img amp-story-txt-inferior-fade-texto">2023</p>
+    </amp-story-grid-layer>
+    
+    <amp-story-cta-layer>
+        <div animate-in="fade-in" animate-in-delay="2s" animate-in-duration="2s">
+            <a animate-in="fly-in-bottom" animate-in-delay="1s" animate-in-duration="2s" class="amp-btn-volver"
+                href="webcal://p61-caldav.icloud.com/published/2/MTYzNzI3MTQ4ODcxNjM3MpxcSKCrS9D6td8yxrYrHy0rvUJi7_lePuL0kMq57nqmvjteoYK_z9H8HgqPMQKBZmJRR0gw25MH6dFzDVq-HIU" target="_blank">
+                AÑADIR CALENDARIO
+            </a>
+        </div>
+    </amp-story-cta-layer>
+</amp-story-page>
+
+
 <!-- 09 010 wild therapy -->
         <amp-story-page id="pag-link-inferior" class="amp-fondo-volver-home">
             <amp-story-grid-layer class="amp-story-portada-img lazy" template="fill">
