--- a/shop/index.html
+++ b/shop/index.html
@@ -967,32 +967,32 @@
         
             <amp-story-grid-layer class="amp-story-txt-inferior-fade-txt" template="vertical">
                 <p class="amp-story-txt-inferior-fade-titulo">  </p>
-                <p class="amp-story-texto-con-img amp-story-txt-inferior-fade-texto">🔗🔗 </p>
+                <p class="amp-story-texto-con-img amp-story-txt-inferior-fade-texto">🔗 </p>
             </amp-story-grid-layer>
         </amp-story-page>
 
 <!-- Calendario -->
 <amp-story-page id="pag-link-inferior" class="amp-fondo-volver-home">
     <amp-story-grid-layer class="amp-story-portada-img lazy" template="fill">
-        <amp-img src="./img/calendar.jpg" width="320" height="548" alt="Volver al home"
+        <amp-img src="./img/dates.jpg" width="320" height="548" alt="Volver al home"
             layout="responsive">
         </amp-img>
     </amp-story-grid-layer>
-    <!-- <amp-story-grid-layer template="thirds">
+    <amp-story-grid-layer template="thirds">
         <span></span>
         <div animate-in="fly-in-bottom" animate-in-delay="0.5s" animate-in-duration="1s"
             class="amp-cont-anim-01">
             <div animate-in="fade-in" animate-in-delay="1s" animate-in-duration="3s">
                 <span class="amp-icon-volver"></span>
-                <p class="amp-story-texto-volver">THERAPY</p>
+                <p class="amp-story-texto-volver"> Filtro de lanzamientos <br> directamente a tu calendario</p>
             </div>
         </div>
-    </amp-story-grid-layer> -->
+    </amp-story-grid-layer>
 
-    <amp-story-grid-layer class="amp-story-txt-inferior-fade-txt" template="vertical" style="margin-bottom: 2rem;">
+    <!-- <amp-story-grid-layer class="amp-story-txt-inferior-fade-txt" template="vertical" style="margin-bottom: 2rem;">
         <p class="amp-story-txt-inferior-fade-titulo"> Próximos lanzamientos </p>
         <p class="amp-story-texto-con-img amp-story-txt-inferior-fade-texto">2023</p>
-    </amp-story-grid-layer>
+    </amp-story-grid-layer> -->
     
     <amp-story-cta-layer>
         <div animate-in="fade-in" animate-in-delay="2s" animate-in-duration="2s">
