--- a/shop/index.html
+++ b/shop/index.html
@@ -941,7 +941,7 @@
                 <div animate-in="fade-in" animate-in-delay="2s" animate-in-duration="2s">
                     <a animate-in="fly-in-bottom" animate-in-delay="1s" animate-in-duration="2s" class="amp-btn-volver"
                         href="https://buy.stripe.com/00g7wm7dj2Jde52dQQ">
-                        1.95€
+                        COMPRAR
                     </a>
                 </div>
             </amp-story-cta-layer>
