--- a/train/index.html
+++ b/train/index.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¿Puedes lograrlo?</title>
+  <title>G.G</title>
   <meta name="description"
-    content="Juego de retos físicos para el desarrollo de habilidades motrices. Juega con tus amigos y demuestra tu talento." />
-  <meta name="keywords" content="juego, retos, habilidades motrices" />
+    content="Juego de retos físicos. Juega con tus amigos y gana dinero ejercitandote." />
+  <meta name="keywords" content="juego, retos, gain" />
   <meta name="author" content="4B" />
   <meta name="copyright" content="4B" />
   <meta name="robots" content="index,follow" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet" />
-  <script type="module" crossorigin src="./assets/index.c312770b.js"></script>
-  <link rel="stylesheet" href="./assets/index.a686673d.css">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet" /> -->
+  <script type="module" crossorigin src="./assets/index.c1908b12.js"></script>
+  <link rel="stylesheet" href="./assets/index.7bc2062a.css">
 </head>
 
 <body class="body">
