--- a/grid/index.html
+++ b/grid/index.html
@@ -7,18 +7,34 @@
 </head>
 <body>
     
+  <header>
+    <h1 id="titulo">BURPIEES</h1>
+    <ul class="days">
+      <li>Lun</li>
+      <li>Mar</li>
+      <li>Mie</li>
+      <li>Jue</li>
+      <li>Vie</li>
+      <li>Sab</li>
+      <li>Dom</li>
+    </ul>
+  </header>
+  
     <div class="graph">
         <ul class="days">
-          <li>Dom</li>
           <li>Lun</li>
           <li>Mar</li>
           <li>Mie</li>
           <li>Jue</li>
           <li>Vie</li>
           <li>Sab</li>
+          <li>Dom</li>
         </ul>
 
         <ul class="months">
+            <li>Nov</li>
+            <li>Dic</li>
+
             <li>Ene</li>
             <li>Feb</li>
             <li>Mar</li>
@@ -26,11 +42,9 @@
             <li>May</li>
             <li>Jun</li>
             <li>Jul</li>
-            <li>Ago</li>
+            <!-- <li>Ago</li>
             <li>Sep</li>
-            <li>Oct</li>
-            <li>Nov</li>
-            <li>Dic</li>
+            <li>Oct</li> -->
           </ul>
           
         <ul class="squares">
@@ -39,6 +53,7 @@
       </div>
 
 
+      <script src="./data.js"></script>
       <script src="./square.js"></script>
 </body>
 </html>
