--- a/init/index.html
+++ b/init/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="../assets/favicon/favicon.ico" />
+  <link rel="icon" href="./favicon.png" />
+  <!-- <link rel="icon" href="../assets/favicon/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover,user-scalable=0" />
   <link rel="manifest" href="../cyborg/manifest.json"/>
   <title>Mixtape Start</title>
 <script type="module" crossorigin src="assets/index.57a787fa.js"></script>
   <link rel="modulepreload" href="assets/vendor.da79cdb7.js">
   <link rel="stylesheet" href="assets/index.7e25d69c.css">
-  <link rel="apple-touch-icon" href="../play/assets/icons/logo192.png"/>
+  <link rel="apple-touch-icon" href="./favicon.png"/>
 </head>
 
 <body>
